--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Qnife</title>
+</head>
+<body>
 
+<h1>This is a stest</h1>
+<p>This is the New Website.</p>
+
+</body>
+</html>
