--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <nav id="nav">
         <ul class="links">
           <li class="active"><a href="index.html">Accueil</a></li>
-          <li><a href="generic.html">Fixes</a></li>
-          <li><a href="generic.html">Pliants</a></li>
-          <li><a href="generic.html">Louis</a></li>
-          <li><a href="generic.html">Mon Histoire</a></li>
-          <li><a href="generic.html">Presse</a></li>
-          <li><a href="generic.html">Entretien</a></li>
+          <li><a href="fixes.html">Fixes</a></li>
+          <li><a href="pliants.html">Pliants</a></li>
+          <li><a href="louis.html">Louis</a></li>
+          <li><a href="story.html">Mon Histoire</a></li>
+          <li><a href="presse.html">Presse</a></li>
+          <li><a href="entretien.html">Entretien</a></li>
         </ul>
         <ul class="icons">
           <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
