--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ name="message" id="message" rows="3"></textarea> </div>
           </section>
           <section>
             <h3>Email</h3>
-            <p><a href="#">info@untitled.tld</a></p>
+            <p><a href="#">contact@qnife.fr</a></p>
           </section>
           <section>
             <h3>Social</h3>
