--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="entretien.html">Entretien</a></li>
         </ul>
         <ul class="icons">
-          <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+          <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span>www.google.fr</a></li>
           <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
         </ul>
       </nav>
