--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <li><a href="entretien.html">Entretien</a></li>
         </ul>
         <ul class="icons">
-          <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span>www.google.fr</a></li>
-          <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+          <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+          <li><a href="https://www.instagram.com/qnifeatelier/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
         </ul>
       </nav>
       <!-- Main -->
