modify insta link for open in a new tab

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </ul>
         <ul class="icons">
           <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-          <li><a href="https://www.instagram.com/qnifeatelier/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+          <li><a href="https://www.instagram.com/qnifeatelier/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
         </ul>
       </nav>
       <!-- Main -->
       <div id="main">
         <!-- Featured Post -->
-        <article class="post featured">
+        <article class="post featured"> 
           <header class="major">
             <h2>En cours de Maintenance !!!</h2>
             <p>Bientôt de retour :)</p>
